making overlapping correct

--- a/components/Layout/layout.module.css
+++ b/components/Layout/layout.module.css
@@ -1,7 +1,8 @@
 .aside {
-    width: 100%;
+    width: 40px;
     height: 100vh;
     position: fixed;
+    left: 0;
     z-index: 2;
 }
 
